# geocodeur

./: .gitignore  Dockerfile  Dockerfile.load  README.md  docker-compose.yml  go.mod  go.sum  main.go  new.sql  pyproject.toml  segments.sql
backup/: geocode.go  setup.go
config/: geocodeur.conf  postgresql.conf
database/: Dockerfile  pgxman.yaml
queries/: division.sql  poi.sql  road.sql
scripts/: download.sh  process.sh
src/: go.mod  go.sum  main.go  overture.py
src/api/handlers/: error.go  geocode.go  lookup.go  not_found.go  status.go
src/api/middleware/: cors.go  logger.go
src/bktree/: bktree.go  new.go
src/database/: pool.go  setup.go
src/httpclientpool/: http.go
src/meili/: request.go  setup.go
src/preprocess/: division_query.go  poi_query.go  preprocess.go  road_query.go  water_query.go
src/preprocess/queries/: address_query.go  division_query.go  infra_query.go  poi_query.go  road_query.go  water_query.go  zipcode_query.go
src/radix/: radix.go
src/server/: server.go
src/service/: geocode.go  lookup.go  query.go
src/settings/: settings.go
src/utils/: utils.go
