[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "geocodeur"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.6.3",
    "overturemaps>=0.12.0",
    "pandas>=2.2.3",
    "pyarrow>=19.0.0",
    "sentence-transformers>=3.3.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
download = "overture:download_data"
create = "database:create"
test = "database:test"
